agregado de buscador y html

--- a/Peleadores.html
+++ b/Peleadores.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" type="text/css" href="/css/layout.css">
     <link rel="stylesheet" type="text/css" href="/css/normalize.css">
     <link rel="icon" href="/imagenes/LogoUFC.ico">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Peleadores de la UFC</title>
 </head>
 
 <body>
     <header></header>
     <main>
+        <h1>ROSTER UFC</h1>
         <div id="contenedor-peleadores"></div>
+        <input type="text" id="inputBuscar" placeholder="Buscar por nombre...">
         <script src="js/peleadores.js"></script>
     </main>
     <footer id="footer"></footer>
     <script src="js/layout.js"></script>
 </body>
+</html>
