--- a/Carteleras/UFC301.html
+++ b/Carteleras/UFC301.html
@@ -9,17 +9,17 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Ufc 300</title>
+    <title>Ufc 301</title>
 </head>
         <header></header>
 
     <main><div class="contenedor-informacion">
-        <a href="UFC299.html">
-            <button id="left-button">UFC 299</button>
+        <a href="UFC300.html">
+            <button id="left-button">UFC 300</button>
         </a>
-        <h1>Cartelera UFC 300</h1>
-        <a href="UFC301.html">
-            <button id="right-button">UFC 301</button>
+        <h1>Cartelera UFC 301</h1>
+        <a href="">
+            <button id="right-button">UFC 302</button>
         </a>
     </div>    
 
@@ -27,8 +27,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Pereira vs Hill.jpg" alt="Pereira vs Hill">
-                    <p>Alex Pereira vs Jamahal Hill</p>
+                    <img src="/imagenes/Pantoja vs Erceg.jpg" alt="Pantoja vs Erceg">
+                    <p>Alexandre Pantoja vs Steve Erceg</p>
                 </button>
             </a>
         </div>
@@ -36,8 +36,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Weili vs Xiaonan.jpg" alt="Weili vs Xiaonan">
-                    <p>Zhang Weili vs Yan Xiaonan</p>
+                    <img src="/imagenes/Martinez vs Aldo.jpg" alt="Martinez vs Aldo">
+                    <p>Jonathan Martinez vs Jose Aldo</p>
                 </button>
             </a>
         </div>
@@ -45,8 +45,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Gaethje vs Holloway.jpg" alt="Gaethje vs Holloway">
-                    <p>Justin Gaethje vs Max Holloway</p>
+                    <img src="/imagenes/Smith vs Petrino.jpg" alt="Smith vs Petrino">
+                    <p>Anthony Smith vs Vitor Petrino</p>
                 </button>
             </a>
         </div>
@@ -54,8 +54,8 @@
         <div class="fight-card">
             <a href="">
                 <button>
-                    <img src="/imagenes/Oliveira vs Tsarukyan.jpg" alt="Oliveira vs Tsarukyan">
-                    <p>Charles Oliveira vs Arman Tsarukyan</p>
+                    <img src="/imagenes/Craig vs Borralho.jpg" alt="Craig vs Borralho">
+                    <p>Paul Craig vs Caio Borralho</p>
                 </button>
             </a>
         </div>
