--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 <body>
     <header></header>
     <main>
-        <img src="imagenes/Pantoja vs Erceg.jpg" class="contenido">
+        <img src="imagenes/Makhachev vs Poirier.jpg" class="contenido">
         <div class="texto">
             <p>Proximamente</p>
-            <h2>UFC 301</h2>
-            <p class="pelea">Pantoja vs Erceg</p>
+            <h2>UFC 302</h2>
+            <p class="pelea">Makhachev vs Poirier</p>
         </div>
         <!-- Aquí puedes agregar el contenido principal de tu página -->
     </main>
