--- a/Carteleras/UFC297.html
+++ b/Carteleras/UFC297.html
@@ -27,7 +27,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=2vWi0EuEK3c&pp=ygUYc3RyaWNrbGFuZCB2cyBkdSBwbGVzc2lz">
                 <button>
                     <img src="/imagenes/Strickland vs Du Plessis.jpg" alt="Strickland vs Du Plessis">
                     <p>Sean Strickland vs Dricus Du Plessis</p>
@@ -36,7 +36,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=NrGX2Moq2Bg&pp=ygUZcGVubmluZ3RvbiB2cyBidWVubyBzaWx2YQ%3D%3D">
                 <button>
                     <img src="/imagenes/Pennington vs Silva.jpg" alt="Pennington vs Silva">
                     <p>Raquel Pennington vs Mayra Bueno Silva</p>
@@ -45,7 +45,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=XQPzAmNLks8&pp=ygUPbWFnbnkgdnMgbWFsb3R0">
                 <button>
                     <img src="/imagenes/Magny vs Malott.jpg" alt="Magny vs Malott">
                     <p>Neil Magny vs Mike Malott</p>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=pgP6YpXk1IE&pp=ygUPYWxsZW4gdnMgZXZsb2V2">
                 <button>
                     <img src="/imagenes/Allen vs Evloev.jpg" alt="Allen vs Evloev">
                     <p>Arnold Allen vs Movsar Evloev</p>
