--- a/Carteleras/UFC298.html
+++ b/Carteleras/UFC298.html
@@ -25,16 +25,16 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=nIERYhRTs3U&pp=ygUWdm9sa2Fub3Zza2kgdnMgdG9wdXJpYQ%3D%3D">
                 <button>
                     <img src="/imagenes/Volkanovski vs Topuria.jpg" alt="Volkanovski vs Topuria">
-                    <p>alexander Volkanovski vs Ilia Topuria</p>
+                    <p>Alexander Volkanovski vs Ilia Topuria</p>
                 </button>
             </a>
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=GGeUDspTMHg&pp=ygUNZ2FycnkgdnMgbmVhbA%3D%3D">
                 <button>
                     <img src="/imagenes/Garry Vs Neal.jpg" alt="Garry vs Neal">
                     <p>Ian Machado Garry vs Geoff Neal</p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=M0tLwGsooYg&pp=ygUVY2VqdWRvIHZzIGR2YWxpc2h2aWxp">
                 <button>
                     <img src="/imagenes/Cejudo vs Dvalishvili.jpg" alt="Cejudo vs Dvalishvili">
                     <p>Henry Cejudo vs Merab Dvalishvili</p>
@@ -52,10 +52,10 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=qQf-ZHmxR2A&pp=ygUWaGVybmFuZGV6IHZzIGFsaXNrZXJvdg%3D%3D">
                 <button>
                     <img src="/imagenes/Hernandez vs Aliskerov.jpg" alt="Hernandez vs Aliskerov">
-                    <p>anthony Hernandez vs Ikram Aliskerov</p>
+                    <p>Anthony Hernandez vs Ikram Aliskerov</p>
                 </button>
             </a>
         </div>
