--- a/Carteleras/UFC299.html
+++ b/Carteleras/UFC299.html
@@ -25,7 +25,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=-p_kFTAqxD8&pp=ygUQdmVyYSB2cyBvJ21hbGxleQ%3D%3D">
                 <button>
                     <img src="/imagenes/Omalley vs Vera.jpg" alt="Omalley vs Vera">
                     <p>Sean O'Malley vs Marlon Vera</p>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=eX6bg5O6MFA&pp=ygUWcG9pcmllciB2cyBzYWludCBkZW5pcw%3D%3D">
                 <button>
                     <img src="/imagenes/Poirier vs Saintdenis.jpg" alt="Poirier vs Saintdenis">
                     <p>Dustin Poirier vs Benoit Saint-Denis</p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=0dtwNZ887js&pp=ygUPaG9sbGFuZCB2cyBwYWdl">
                 <button>
                     <img src="/imagenes/Holland vs Page.jpg" alt="Holland vs Page">
                     <p>Kevin Holland vs Michael Page</p>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=mMkHVHzd5iA&pp=ygUSYnVybnMgdnMgbWFkZGFsZW5h">
                 <button>
                     <img src="/imagenes/Burns vs Dellamadalena.jpg" alt="Burns vs Dellamadalena">
                     <p>Gilbert Burns vs Jack Della Madalena</p>
