--- a/Carteleras/UFC300.html
+++ b/Carteleras/UFC300.html
@@ -25,7 +25,7 @@
 
     <div class="image-container">
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=cf_Zdj3ek9I&pp=ygUPcGVyZWlyYSB2cyBoaWxs">
                 <button>
                     <img src="/imagenes/Pereira vs Hill.jpg" alt="Pereira vs Hill">
                     <p>Alex Pereira vs Jamahal Hill</p>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=v3rrUDAPiV4&pp=ygUMd2VpbGkgdnMgeWFu">
                 <button>
                     <img src="/imagenes/Weili vs Xiaonan.jpg" alt="Weili vs Xiaonan">
                     <p>Zhang Weili vs Yan Xiaonan</p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=BTagozOQ7BU&pp=ygUTZ2FldGhqZSB2cyBob2xsb3dheQ%3D%3D">
                 <button>
                     <img src="/imagenes/Gaethje vs Holloway.jpg" alt="Gaethje vs Holloway">
                     <p>Justin Gaethje vs Max Holloway</p>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="fight-card">
-            <a href="">
+            <a href="https://www.youtube.com/watch?v=UiKYtmdEFVU&pp=ygUVb2xpdmVpcmEgdnMgdHNhcnVreWFu">
                 <button>
                     <img src="/imagenes/Oliveira vs Tsarukyan.jpg" alt="Oliveira vs Tsarukyan">
                     <p>Charles Oliveira vs Arman Tsarukyan</p>
