--- a/Peleadores/Alex Perez.html
+++ b/Peleadores/Alex Perez.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Alex Perez</h1>
-                <p class="division">Flyweight</p>
-                <p class="record">24-8-0 (W-L-D)</p>
+                <p class="division">Peso Mosca</p>
+                <p class="record">25-8-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Alex Perez Completo.jpg">
         </div>
