--- a/Peleadores/Bogdan Guskov.html
+++ b/Peleadores/Bogdan Guskov.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Bogdan Guskov</h1>
-                <p class="division">Light Heavyweight</p>
-                <p class="record">15-3-0 (W-L-D)</p>
+                <p class="division">Peso Semipesado</p>
+                <p class="record">16-3-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Bogdan Guskov Completo.jpg">
         </div>
