--- a/Peleadores/Ernesta Kareckaite.html
+++ b/Peleadores/Ernesta Kareckaite.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <title>Ernesta Kareckaite</title>
+    <title>Ernesta Kareckaitė</title>
 </head>
 
 <body>
@@ -22,11 +22,11 @@
     <main>
         <div class="contenedor-informacion">
             <div class="informacion">
-                <h1>Ernesta Kareckaite</h1>
+                <h1>Ernesta Kareckaitė</h1>
                 <p class="division">Peso Mosca Femenino</p>
-                <p class="record">1-0-0 (W-L-D)</p>
+                <p class="record">5-1-1 (W-L-D)</p>
             </div>
-            <img src="../imagenes/Ernesta Kareckaite Completo.jpg">
+            <img src="../imagenes/Ernesta Kareckaitė Completo.jpg">
         </div>
     </main>
     <footer></footer>
