--- a/Peleadores/Ihor Potieria.html
+++ b/Peleadores/Ihor Potieria.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Ihor Potieria</h1>
-                <p class="division">Peso Semipesado</p>
-                <p class="record">20-5-0 (W-L-D)</p>
+                <p class="division">Peso Medio</p>
+                <p class="record">20-6-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Ihor Potieria Completo.jpg">
         </div>
