--- a/Peleadores/Iasmin Lucindo.html
+++ b/Peleadores/Iasmin Lucindo.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Iasmin Lucindo</h1>
-                <p class="division">Peso Mosca Femenino</p>
-                <p class="record">15-5-0 (W-L-D)</p>
+                <p class="division">Peso Paja Femenino</p>
+                <p class="record">16-5-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Iasmin Lucindo Completo.jpg">
         </div>
