--- a/Peleadores/Karine Silva.html
+++ b/Peleadores/Karine Silva.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Karine Silva</h1>
-                <p class="division">Women's Flyweight</p>
-                <p class="record">17-4-0 (W-L-D)</p>
+                <p class="division">Peso Mosca Femenino</p>
+                <p class="record">18-4-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Karine Silva Completo.jpg">
         </div>
