--- a/Peleadores/Matheus Nicolau.html
+++ b/Peleadores/Matheus Nicolau.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Matheus Nicolau</h1>
-                <p class="division">Flyweight</p>
-                <p class="record">19-4-1 (W-L-D)</p>
+                <p class="division">Peso Mosca</p>
+                <p class="record">19-5-1 (W-L-D)</p>
             </div>
             <img src="../imagenes/Matheus Nicolau Completo.jpg">
         </div>
