--- a/Peleadores/Mauricio Ruffy.html
+++ b/Peleadores/Mauricio Ruffy.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Mauricio Ruffy</h1>
-                <p class="division">Peso Welter</p>
-                <p class="record">0-0-0 (W-L-D)</p>
+                <p class="division">Peso Ligero</p>
+                <p class="record">10-1-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Mauricio Ruffy Completo.jpg">
         </div>
