--- a/Peleadores/Myktybek Orolbai.html
+++ b/Peleadores/Myktybek Orolbai.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Myktybek Orolbai</h1>
-                <p class="division">Peso Welter</p>
-                <p class="record">12-1-1 (W-L-D)</p>
+                <p class="division">Peso Ligero</p>
+                <p class="record">13-1-1 (W-L-D)</p>
             </div>
             <img src="../imagenes/Myktybek Orolbai Completo.jpg">
         </div>
