--- a/Peleadores/Rani Yahya.html
+++ b/Peleadores/Rani Yahya.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Rani Yahya</h1>
-                <p class="division">Bantamweight</p>
-                <p class="record">28-11-1 (W-L-D)</p>
+                <p class="division">Peso Gallo</p>
+                <p class="record">28-12-1 (W-L-D)</p>
             </div>
             <img src="../imagenes/Rani Yahya Completo.jpg">
         </div>
