--- a/Peleadores/Ryan Spann.html
+++ b/Peleadores/Ryan Spann.html
@@ -23,8 +23,8 @@
         <div class="contenedor-informacion">
             <div class="informacion">
                 <h1>Ryan Spann</h1>
-                <p class="division">Light Heavyweight</p>
-                <p class="record">21-9-0 (W-L-D)</p>
+                <p class="division">Peso Semipesado</p>
+                <p class="record">21-10-0 (W-L-D)</p>
             </div>
             <img src="../imagenes/Ryan Spann Completo.jpg">
         </div>
