--- a/Carteleras.html
+++ b/Carteleras.html
@@ -20,6 +20,45 @@
 
       <div class="eventosNumerados">
         <div>
+          <a href="/Carteleras/UFC305.html"><img src="imagenes/Dricus Du Plessis.jpg" /><img
+              src="imagenes/Israel Adesanya.jpg" /><br />
+            <p>Dricus Du Plessis vs Israel Adesanya</p>
+            <br />UFC 305
+          </a>
+        </div>
+      </div>
+
+      <div class="eventosNumerados">
+        <div>
+          <a href="/Carteleras/UFC304.html"><img src="imagenes/Leon Edwards.jpg" /><img
+              src="imagenes/Belal Muhammad.jpg" /><br />
+            <p>Leon Edwards vs Belal Muhammad 2</p>
+            <br />UFC 304
+          </a>
+        </div>
+      </div>
+
+      <div class="eventosNumerados">
+        <div>
+          <a href="/Carteleras/UFC303.html"><img src="imagenes/Alex Pereira.jpg" /><img
+              src="imagenes/Jiri Prochazka.jpg" /><br />
+            <p>Alex Pereira vs Jiri Prochazka 2</p>
+            <br />UFC 303
+          </a>
+        </div>
+      </div>
+
+      <div class="eventosNumerados">
+        <div>
+          <a href="/Carteleras/UFC302.html"><img src="imagenes/Islam Makhachev.jpg" /><img
+              src="imagenes/Dustin Poirier.jpg" /><br />
+            <p>Islam Makhachev vs Dustin Poirier</p>
+            <br />UFC 302
+          </a>
+        </div>
+      </div>
+      <div class="eventosNumerados">
+        <div>
           <a href="/Carteleras/UFC301.html"><img src="imagenes/Alexandre Pantoja.jpg" /><img
               src="imagenes/Steve Erceg.jpg" /><br />
             <p>Alexandre Pantoja vs Steve Erceg</p>
